GC options reverted to CMS (issue #19):
- https://github.com/VRL-Studio/VRL-Studio/issues/19
- max stack size increased